--- a/server/MDrop.Broker/MDrop.Broker.csproj
+++ b/server/MDrop.Broker/MDrop.Broker.csproj
@@ -27,5 +27,8 @@
     <PublishTrimmed>true</PublishTrimmed>
     <TrimMode>full</TrimMode>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
 
 </Project>
