feat(dev/server): add JWT token for verification

--- a/server/MDrop.Broker/MDrop.Broker.csproj
+++ b/server/MDrop.Broker/MDrop.Broker.csproj
@@ -28,6 +28,7 @@
     <TrimMode>full</TrimMode>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="JWT" Version="10.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
   </ItemGroup>
 
