chore!(improv): add base client app and improving broker response (#3)
* feat(dev/cli): initialize cli

* refactor(dev/cli): refactoring flag system

* refactor(dev/cli): simplify print usage

* feat(dev/cli): add custom http handler for verifying

* feat(dev/server): add isPublic property on variable

* feat(dev/cli): add status code validation for response

* feat(dev/cli): add status code validation for response

* feat(dev/cli): finalize auth command

* feat(dev/cli): create base command for get

* refactor(dev/cli): formatting auth and add remove default value

* feat(dev/cli): create http request for get token before spawning echo instance

* feat(dev/cli): implementing webserver on get command

* refactor(dev/cli): pruning one file

* feat(dev/image): add docker compose

* fix(dev/server): modify dockerfile

* fix(dev/server): pruning dockerfile and modify csproj

* feat(dev/cli): add message on command before sending file

* feat(dev/cli): add feature to upload

* feat(dev/cli): add progress while uploading

* feat(dev/cli): add slider for progressbar

* feat(dev/cli): add validator for duplicate file

* feat(dev/cli): set response header for keep-alive

* refactor(dev/cli): remove unnecessary file

* feat(dev/cli): create new base command for send

* refactor(dev/server): add tunnel metadata on verify

* feat(dev/server): improving entrypoint for creating base random passowrd for salting certificate (soon)

* refactor(dev/server): add environment on docker compose

* fix(dev/cli): change parsing and add missing parameter

* fix(dev/cli): fixing wrong pinning json

* feat(dev/cli): add ssh tunnel generator args and implement on get variable

* feat(dev/cli): make function to upload file
fix(dev/cli): create command for gracefully kill tunnel after transfer

* fix(dev/cli): fix error when ssh tunnel is up

* feat(dev/cli): progress bar for uploading
fix(dev/cli): make receiver only retrive one 

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,19 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine as builder
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine as build
 WORKDIR /app
 COPY . .
 
 RUN set -ex; \
-  dotnet publish -c Release; \
-  mv /app/MDrop.Broker/bin/Release/net8.0/linux-x64/publish /app/;
+  dotnet restore; \
+  dotnet publish --no-restore -c Release -o ./Application
 
-FROM docker.io/library/alpine:latest as runner
-COPY --from=builder /app/publish /app
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine-composite
 WORKDIR /app
+
+COPY --from=build /app/Application /app
+COPY --from=build /app/*.sh /app/
 
 RUN set -ex; \
   apk update; \
-  apk add gcc gcompat icu-dev icu-libs musl-dev tzdata; \
-  rm appsettings.*.json;
+  apk add openssl;
 
-CMD [ "/app/MDrop.Broker" ]
+ENTRYPOINT [ "/app/entrypoint.sh" ]
