--- a/.github/workflows/build-image-sshd_tunnel.yml
+++ b/.github/workflows/build-image-sshd_tunnel.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: registry.mitija.com
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWORD }}
 
       - name: Generate Docker image metadata
         uses: docker/metadata-action@v5
