--- a/.github/workflows/build-image-broker.yml
+++ b/.github/workflows/build-image-broker.yml
@@ -6,42 +6,8 @@ on:
       - master
 
 jobs:
-  build_push:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check Out Repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Generate Docker image metadata
-        uses: docker/metadata-action@v5
-        id: img_meta
-        with:
-          flavor: |
-            latest=auto
-            suffix=${{ steps.flavor.outputs.name }}
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=sha,format=short,prefix=commit-
-            type=raw,value=latest
-
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          context: server/
-          push: true
-          tags: ${{ steps.img_meta.outputs.tags }}
-          labels: ${{ steps.img_meta.outputs.labels }}
+  build:
+    uses: ./.github/workflows/build-push.yml
+    with:
+      folder_path: server/
+    secrets: inherit
