--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -6,11 +6,11 @@ on:
       images_name:
         required: true
         type: string
-        defaul: ghcr.io/${{ github.repository }}
+        default: ghcr.io/${{ github.repository }}
       folder_path:
         required: true
         type: string
-        defaul: .
+        default: .
 
 jobs:
   build:
