feat(dockerfile): add manintener on dockerimage

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine as build
+LABEL org.opencontainers.image.authors="Ikramullah <ikramullah@mplus.software>"
 WORKDIR /app
 COPY . .
 
@@ -7,6 +8,7 @@ RUN set -ex; \
   dotnet publish --no-restore -c Release -o ./Application
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine-composite
+LABEL org.opencontainers.image.authors="Ikramullah <ikramullah@mplus.software>"
 WORKDIR /app
 
 COPY --from=build /app/Application /app
