feat(tunnel): add new binary for mdrop-tunnel and ssh configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,10 @@
 services:
   sshd_tunnel:
     container_name: sshd_tunnel
+    restart: unless-stopped
+    environment:
+      PRIVATE_TOKEN: mdrop-jaya-selalu
     build:
       context: .
-    restart: unless-stopped
     ports:
       - 2222:22
