--- a/tunnel.conf
+++ b/tunnel.conf
@@ -4,5 +4,5 @@ Match User tunnel
     X11Forwarding no
     PermitTTY no
     AllowTcpForwarding yes
-    ForceCommand /start.sh
+    ForceCommand mdrop-tunnel $SSH_ORIGINAL_COMMAND
     PermitEmptyPasswords yes
