refactor(github): change github workflow and change base golang build image

--- a/.github/workflows/build-image-broker.yml
+++ b/.github/workflows/build-image-broker.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - master
+      - development
 
 jobs:
   build-sshd:
     uses: ./.github/workflows/build-push.yml
     with:
-      folder_path: .
+      context: ./tunnel.Dockerfile
       images_name: ghcr.io/${{ github.repository }}-sshd-tunnel
     secrets: inherit
