--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -6,7 +6,7 @@ on:
       images_name:
         type: string
         default: ghcr.io/${{ github.repository }}
-      folder_path:
+      context:
         type: string
         default: .
 
