--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -9,6 +9,9 @@ on:
       context:
         type: string
         default: .
+      file:
+        type: string
+        default: ./Dockerfile
 
 jobs:
   build:
@@ -46,7 +49,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: ${{ inputs.folder_path }}
+          context: .
           push: true
           tags: ${{ steps.img_meta.outputs.tags }}
           labels: ${{ steps.img_meta.outputs.labels }}
