fix(github): context and file pinning #2

--- a/.github/workflows/build-image-broker.yml
+++ b/.github/workflows/build-image-broker.yml
@@ -11,6 +11,6 @@ jobs:
     uses: ./.github/workflows/build-push.yml
     with:
       context: .
-      file: ./tunnel.Dockerfile
+      file: tunnel.Dockerfile
       images_name: ghcr.io/${{ github.repository }}-sshd-tunnel
     secrets: inherit
