--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -53,3 +53,4 @@ jobs:
           push: true
           tags: ${{ steps.img_meta.outputs.tags }}
           labels: ${{ steps.img_meta.outputs.labels }}
+          file: ${{ inputs.file }}
