--- a/.github/workflows/reusable-build-golang-alpine.yml
+++ b/.github/workflows/reusable-build-golang-alpine.yml
@@ -6,6 +6,12 @@ on:
       make_command:
         type: string
         default: restore
+      use_artifacts:
+        type: boolean
+        default: false
+      binary_name:
+        type: string
+        default: mdrop
 
 jobs:
   build:
@@ -23,3 +29,9 @@ jobs:
           apk add make gcc musl-dev
       - name: Build app
         run: make ${{ inputs.make_command }}
+      - name: Upload artifacts
+        if: ${{ inputs.use_artifacts }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ inputs.binary_name }}-build-artifact
+          path: ${{ inputs.binary_name }}
