--- a/.github/workflows/reusable-upload-s3.yml
+++ b/.github/workflows/reusable-upload-s3.yml
@@ -33,23 +33,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl openssl
       - name: Upload file
-        run: |
-          URL=${{ secrets.BUCKET_URL }}
-          USERNAME=${{ secrets.BUCKET_USERNAME }}
-          PASSWORD=${{ secrets.BUCKET_PASSWORD }}
-          BUCKET=${{ secrets.BUCKET_NAME }}
-          MINIO_PATH="/${BUCKET}/."
-          FILE=${{ inputs.binary_name }}
-
-          DATE=$(date -R --utc)
-          CONTENT_TYPE='binary/octet-stream'
-          SIG_STRING="PUT\n\n${CONTENT_TYPE}\n${DATE}\n${MINIO_PATH}"
-          SIGNATURE=`echo -en ${SIG_STRING} | openssl sha1 -hmac ${PASSWORD} -binary | base64`
-
-          curl -T $FILE\
-              -X PUT \
-              -H "Host: $URL" \
-              -H "Date: ${DATE}" \
-              -H "Content-Type: ${CONTENT_TYPE}" \
-              -H "Authorization: AWS ${USERNAME}:${SIGNATURE}" \
-              https://$URL${MINIO_PATH}
+        uses: shallwefootball/upload-s3-action
+        with:
+          endpoint: ${{ secrets.BUCKET_URL }}
+          aws_key_id: ${{ secrets.BUCKET_USERNAME }}
+          aws_secret_access_key: ${{ secrets.BUCKET_PASSWORD }}
+          aws_bucket: ${{ secrets.BUCKET_NAME }}
+          source_dir: ./${{ inputs.binary_name }}
