refactor(github): reorder action position

--- a/.github/workflows/build-upload-binary.yml
+++ b/.github/workflows/build-upload-binary.yml
@@ -15,6 +15,13 @@ jobs:
       binary_name: mdrop
     secrets: inherit
 
+  client-upload:
+    needs: client
+    uses: ./.github/workflows/reusable-upload-s3.yml
+    with:
+      binary_name: mdrop
+    secrets: inherit
+
   tunnel:
     uses: ./.github/workflows/reusable-build-golang-alpine.yml
     with:
@@ -23,15 +30,8 @@ jobs:
       binary_name: mdrop-tunnel
     secrets: inherit
 
-  client-upload:
-    needs: client
-    uses: ./.github/workflows/reusable-upload-s3.yml
-    with:
-      binary_name: mdrop
-    secrets: inherit
-
   tunnel-upload:
-    needs: [tunnel, client-upload]
+    needs: tunnel
     uses: ./.github/workflows/reusable-upload-s3.yml
     with:
       binary_name: mdrop-tunnel
