--- a/.github/workflows/reusable-upload-s3.yml
+++ b/.github/workflows/reusable-upload-s3.yml
@@ -33,7 +33,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl openssl
       - name: Upload file
-        uses: shallwefootball/upload-s3-action
+        uses: shallwefootball/upload-s3-action@master
         with:
           endpoint: ${{ secrets.BUCKET_URL }}
           aws_key_id: ${{ secrets.BUCKET_USERNAME }}
