refactor(github): change destination dir

--- a/.github/workflows/reusable-upload-s3.yml
+++ b/.github/workflows/reusable-upload-s3.yml
@@ -40,3 +40,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.BUCKET_PASSWORD }}
           aws_bucket: ${{ secrets.BUCKET_NAME }}
           source_dir: .
+          destination_dir: .
