--- a/.github/workflows/reusable-upload-s3.yml
+++ b/.github/workflows/reusable-upload-s3.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{ inputs.binary_name }}-build-artifact
+          name: ${{ inputs.binary_name }}-build-artifact-${{ github.sha }}
       - name: Check file
         run: |
           pwd
