--- a/.github/workflows/build-binary-darwin.yml
+++ b/.github/workflows/build-binary-darwin.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.22
       - name: Build
         run: make build-client-darwin
       - name: Check file
