--- a/.github/workflows/build-binary-darwin.yml
+++ b/.github/workflows/build-binary-darwin.yml
@@ -7,17 +7,12 @@ on:
 
 jobs:
   test-build:
-    runs-on: macos-latest
-    steps:
-      - name: Check Out Repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - name: Setup Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.22
-      - name: Build
-        run: make build-client-darwin
-      - name: Check file
-        run: ls -lah
+    strategy:
+      matrix:
+        make_command: [build-client-darwin, build-tunnel-darwin]
+    uses: ./.github/workflows/reusable-build-golang-alpine.yml
+    with:
+      make_command: ${{ matrix.make_command }}
+      runner: macos-latest
+      binary_name: mdrop-darwin
+    secrets: inherit
