--- a/.github/workflows/reusable-build-golang-alpine.yml
+++ b/.github/workflows/reusable-build-golang-alpine.yml
@@ -3,6 +3,9 @@ name: Reusable workflow for build golang on alpine
 on:
   workflow_call:
     inputs:
+      runner:
+        type: string
+        default: ubuntu-latest
       make_command:
         type: string
         default: restore
@@ -15,7 +18,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runner }}
     container:
       image: docker.io/library/golang:alpine
     steps:
@@ -23,7 +26,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Install cgo + make Dependencies
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        if: ${{ inputs.runner != 'ubuntu-latest' }}
+        with:
+          go-version: 1.22
+      - name: Install Musl Dependencies (Linux)
+        if: ${{ inputs.runner == 'ubuntu-latest' }}
         run: |
           apk update
           apk add make gcc musl-dev
@@ -33,5 +42,5 @@ jobs:
         if: ${{ inputs.use_artifacts }}
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ inputs.binary_name }}-build-artifact-${{ github.sha }}
+          name: ${{ inputs.binary_name }}-artifact-${{ github.sha }}-${{ runner.os }}
           path: ./${{ inputs.binary_name }}
