--- a/.github/workflows/reusable-build-golang-alpine.yml
+++ b/.github/workflows/reusable-build-golang-alpine.yml
@@ -38,9 +38,9 @@ jobs:
           apk add make gcc musl-dev
       - name: Build app
         run: make ${{ inputs.make_command }}
-      - name: Upload artifacts
-        if: ${{ inputs.use_artifacts }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ inputs.binary_name }}-artifact-${{ github.sha }}-${{ runner.os }}
-          path: ./${{ inputs.binary_name }}
+          #- name: Upload artifacts
+          #  if: ${{ inputs.use_artifacts }}
+          #  uses: actions/upload-artifact@v4
+          #  with:
+          #    name: ${{ inputs.binary_name }}-artifact-${{ github.sha }}-${{ runner.os }}
+          #    path: ./${{ inputs.binary_name }}
