--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,10 @@ services:
   sshd_tunnel:
     container_name: sshd_tunnel
     restart: unless-stopped
+    environment:
+      PRIVATE_MODE_TOKEN: mplusjayaselalu
     build:
       context: .
+      dockerfile: ./tunnel.Dockerfile
     ports:
       - 2222:22
