chore!(github): change runs-on

--- a/.github/workflows/build-binary-darwin.yml
+++ b/.github/workflows/build-binary-darwin.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ inputs.runner }}
+    runs-on: macos-latest
     container:
       image: docker.io/library/golang:alpine
     steps:
