--- a/.github/workflows/reusable-upload-s3.yml
+++ b/.github/workflows/reusable-upload-s3.yml
@@ -15,6 +15,12 @@ on:
       binary_name:
         type: string
         default: mdrop
+      binary_os:
+        type: string
+        default: linux
+      binary_arch:
+        type: string
+        default: amd64
 
 jobs:
   upload:
@@ -23,7 +29,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{ inputs.binary_name }}-build-artifact-${{ github.sha }}
+          name: ${{ inputs.binary_name }}-${{ inputs.binary_os }}-${{ inputs.binary_arch }}-artifact
       - name: Check file
         run: |
           pwd
